--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: rails-graphql-boilerplate_development
+  database: meetup-event-planner_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: rails-graphql-boilerplate_test
+  database: meetup-event-planner_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: rails-graphql-boilerplate_production
-  username: rails-graphql-boilerplate
+  database: meetup-event-planner_production
+  username: meetup-event-planner
   password: <%= ENV['CODEREVIEWER-API_DATABASE_PASSWORD'] %>
