--- a/client/package.json
+++ b/client/package.json
@@ -80,6 +80,7 @@
   "homepage": "https://github.com/RyanCCollins/scalable-react-boilerplate#readme",
   "dependencies": {
     "actions": "^1.3.0",
+    "apollo-client": "^0.4.20",
     "babel-core": "^6.3.15",
     "babel-loader": "^6.2.0",
     "babel-polyfill": "latest",
@@ -95,6 +96,7 @@
     "extract-text-webpack-plugin": "^v2.0.0-beta.3",
     "file-loader": "^0.9.0",
     "foundation-sites": "^6.2.3",
+    "graphql-tag": "^0.1.14",
     "grommet-udacity": "v0.1.1",
     "history": "^1.14.0",
     "html-webpack-plugin": "^2.7.1",
@@ -108,6 +110,7 @@
     "react": "^15.1.0",
     "react-addons-css-transition-group": "^15.2.1",
     "react-addons-test-utils": "^15.3.2",
+    "react-apollo": "^0.5.7",
     "react-dom": "^15.0.1",
     "react-foundation": "^0.6.8",
     "react-intl": "^2.1.3",
