--- a/client/package.json
+++ b/client/package.json
@@ -105,6 +105,7 @@
     "jest": "^15.1.1",
     "jest-cli": "^15.1.1",
     "json-loader": "^0.5.4",
+    "lru-memoize": "^1.0.1",
     "minimist": "^1.2.0",
     "node-sass": "^3.4.2",
     "react": "^15.1.0",
