--- a/client/package.json
+++ b/client/package.json
@@ -97,6 +97,7 @@
     "file-loader": "^0.9.0",
     "foundation-sites": "^6.2.3",
     "graphql-tag": "^0.1.14",
+    "grommet": "^0.6.12",
     "grommet-udacity": "v0.1.1",
     "history": "^1.14.0",
     "html-webpack-plugin": "^2.7.1",
@@ -127,7 +128,7 @@
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "svg-react-loader": "^0.3.6",
-    "webpack": "v2.1.0-beta.19"
+    "webpack": "^2.1.0-beta.19"
   },
   "devDependencies": {
     "babel-eslint": "^5.0.0-beta4",
