--- a/client/package.json
+++ b/client/package.json
@@ -108,6 +108,7 @@
     "json-loader": "^0.5.4",
     "lru-memoize": "^1.0.1",
     "minimist": "^1.2.0",
+    "moment": "^2.15.1",
     "node-sass": "^3.4.2",
     "react": "^15.1.0",
     "react-addons-css-transition-group": "^15.2.1",
