--- a/client/package.json
+++ b/client/package.json
@@ -122,6 +122,7 @@
     "react-router": "^2.3.0",
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
+    "redux-auth-wrapper": "^0.8.0",
     "redux-form": "^5.2.5",
     "redux-logger": "^2.6.1",
     "redux-promise-middleware": "^3.2.0",
