--- a/client/package.json
+++ b/client/package.json
@@ -112,11 +112,13 @@
     "node-sass": "^3.4.2",
     "react": "^15.1.0",
     "react-addons-css-transition-group": "^15.2.1",
+    "react-addons-shallow-compare": "^15.1.0",
     "react-addons-test-utils": "^15.3.2",
     "react-addons-update": "^15.3.2",
     "react-apollo": "^0.5.7",
     "react-dom": "^15.0.1",
     "react-foundation": "^0.6.8",
+    "react-geosuggest": "^2.0.0",
     "react-intl": "^2.1.3",
     "react-redux": "^4.4.5",
     "react-router": "^2.3.0",
