--- a/client/package.json
+++ b/client/package.json
@@ -133,6 +133,7 @@
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "svg-react-loader": "^0.3.6",
+    "utils": "^0.3.1",
     "webpack": "^2.1.0-beta.19"
   },
   "devDependencies": {
