--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 *.scss linguist-language=JavaScript
 *.html linguist-language=JavaScript
-*.css linguist-language=Ruby
+*.css linguist-language=JavaScript
