--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,7 @@
     "test": {
       "plugins": [
         [
-          "babel-plugin-webpack-loaders",
-          {
+          "babel-plugin-webpack-loaders", {
             "config": "./config/testing/webpack.test.config.js",
             "verbose": false
           }
@@ -97,8 +96,7 @@
     "file-loader": "^0.9.0",
     "foundation-sites": "^6.2.3",
     "graphql-tag": "^0.1.14",
-    "grommet": "^0.6.12",
-    "grommet-udacity": "v0.1.1",
+    "grommet-udacity": "^0.1.5",
     "history": "^1.14.0",
     "html-webpack-plugin": "^2.7.1",
     "immutable": "^3.7.5",
