--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "test": {
       "plugins": [
         [
-          "babel-plugin-webpack-loaders", {
+          "babel-plugin-webpack-loaders",
+          {
             "config": "./config/testing/webpack.test.config.js",
             "verbose": false
           }
@@ -96,6 +97,7 @@
     "file-loader": "^0.9.0",
     "foundation-sites": "^6.2.3",
     "graphql-tag": "^0.1.14",
+    "grommet": "^1.0.0",
     "grommet-udacity": "^0.1.7",
     "history": "^1.14.0",
     "html-webpack-plugin": "^2.7.1",
