Feat: update the create event container with new select field

--- a/client/package.json
+++ b/client/package.json
@@ -98,7 +98,7 @@
     "foundation-sites": "^6.2.3",
     "graphql-tag": "^0.1.14",
     "grommet": "^1.0.0",
-    "grommet-udacity": "^0.1.7",
+    "grommet-udacity": "^0.1.9",
     "history": "^1.14.0",
     "html-webpack-plugin": "^2.7.1",
     "immutable": "^3.7.5",
@@ -124,6 +124,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.3.0",
     "react-router-redux": "^4.0.4",
+    "react-select": "^1.0.0-rc.2",
     "redux": "^3.5.2",
     "redux-auth-wrapper": "^0.8.0",
     "redux-form": "^5.2.5",
