--- a/client/package.json
+++ b/client/package.json
@@ -96,8 +96,7 @@
     "file-loader": "^0.9.0",
     "foundation-sites": "^6.2.3",
     "graphql-tag": "^0.1.14",
-    "grommet": "^1.0.0",
-    "grommet-udacity": "^0.1.10",
+    "grommet-udacity": "0.1.10",
     "history": "^1.14.0",
     "html-webpack-plugin": "^2.7.1",
     "immutable": "^3.7.5",
